# ai-trading-assistant

./: .env.example  .gitignore  README.md  pyproject.toml
backtests/: cli.py  directional_cli.py  directional_runner.py  price_paths.py  runner.py  simulator.py  synthetic_options.py
data/: strategy_kb.md  watchlist.json
docs/: ARCHITECTURE.md  DECISIONS.md  LIVE_READINESS_CHECKLIST.md  RUNBOOK.md  RUNBOOK_ECOSYSTEM.md  SELF_LEARNING_LOOP.md  SETUP_PHASE4.md  STRANGLE_STRATEGY_DESIGN.md  STRATEGIES.md  STRATEGY_REVIEW_2026-06-18.md  VRP_STRATEGY_DESIGN.md  indicator-weighting-analysis.md  remote-access-setup.md  tradingview-setup.md
hermes/: config.py  db.py  logging.py  risk_manager.py  router.py
integrations/: alpaca_client.py  alpaca_stream.py  daily_bias.py  discord_bot.py  discord_commands.py  macro_context_client.py  truth_social_client.py
scripts/: archive_clear_channels.py  backtest_condor_sizing.py  backtest_condor_vix_gate.py  backtest_engine.py  backtest_equities_strategy.py  backtest_hour_of_day.py  backtest_macd_200ema.py  backtest_macd_intraday.py  backtest_modulated_seller.py  backtest_strangle.py  backtest_trend_0dte.py  backtest_trend_1min_costs.py  backtest_trend_leg.py  backtest_trend_sleeve.py  backtest_vrp.py  backtest_weekly.py  backtest_wide_condor.py  calibrate_adx.py  condor_fill_tracker.py  condor_preopen_check.py  condor_vs_actual.py  engine_behavior_check.py  equities_scan_dryrun.py  fetch_macro_context.py  force_test_trade.py  hypothesis_review.py  model_0dte_pnl.py  replay_model_comparison.py  setup.sh  strangle_calm_days.py  (+4 more)
(+127 files in other folders)
