[project]
name = "ai-trading-assistant"
version = "0.1.0"
description = "Hermes-orchestrated multi-agent trading and alert system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alpaca-py>=0.30.0",
    "anthropic>=0.40.0",
    "google-generativeai>=0.8.0",
    "openai>=1.50.0",
    "discord.py>=2.4.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "aiohttp>=3.10.0",
    "httpx>=0.27.0",
    "structlog>=24.4.0",
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "ta>=0.11.0",
    "apscheduler>=3.10.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]
backtest = [
    "vectorbt>=0.26.0",
    "matplotlib>=3.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hermes", "agents", "strategies", "integrations"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
